fix: border-radius not visible on image placeholder

--- a/packages/components/src/components/Image/Image.css
+++ b/packages/components/src/components/Image/Image.css
@@ -1,12 +1,13 @@
 div.cf-placeholder-wrapper {
   /* Required for the absolute positioned icon to render in the center */
   position: relative;
+  outline-offset: -2px;
+  outline: 2px solid rgba(var(--cf-color-gray400-rgb), 0.5);
+  overflow: hidden;
 }
 
 img.cf-placeholder-image {
   background-color: var(--cf-color-gray100);
-  outline-offset: -2px;
-  outline: 2px solid rgba(var(--cf-color-gray400-rgb), 0.5);
   width: 100%;
   height: 100%;
 }
